Juda ko'p o'zgarish qildim men xoxlagan narsa bo'ldi lekin hali tugamadi swagger ochilmayapti